--- a/view/editor/style/style.css
+++ b/view/editor/style/style.css
@@ -52,19 +52,25 @@
     border-bottom: 1px solid #e0e0e0;
 }
 
-/* form */
-* {
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border;
-}
-
+/* AlertifyJS dialog */
 .ajs-dialog {
   background: linear-gradient(to bottom, #fffefc, #e6e6e6) no-repeat scroll 0 0 rgba(0, 0, 0, 0);
 }
 
 .ajs-body {
   padding: 0 32px;
+}
+
+.alertify .ajs-commands {
+  right: 0px !important;
+  margin: -20px 7px 0 0 !important;
+}
+
+/* form */
+* {
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border;
 }
 
 .form {
@@ -127,10 +133,6 @@
   width: 100%;
 }
 
-.form .form_fields .form_field label select {
-  width: 100%;
-}
-
 .form .form_submit {
   margin: 30px 0 0 0;
 }
@@ -172,7 +174,7 @@
   text-align: center;
 }
 
-.form .form_fields .form_field_select_wrap {
+/*.form .form_fields .form_field_select_wrap {
   display: inline-block;
   position: relative;
   width: 100%;
@@ -187,7 +189,7 @@
     position: absolute;
     pointer-events: none;
 }*/
-.form .form_fields .form_field_select_wrap select.form_field_select {
+.form .form_fields select.form_field_select {
   display: inline-block;
   width: 100%;
   margin: 0px;
