track-list view ready

--- a/view/editor/style/style.css
+++ b/view/editor/style/style.css
@@ -32,7 +32,7 @@
 
 .error_input{
   border: 1px solid #EA493C !important;
-  background-color: #FFE2E0 !important;
+  /*background-color: #FFE2E0 !important;*/
 }
 
 .error{
