--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -615,6 +615,103 @@ body {
 form {
     padding: 0;
 }
+.pagination {
+    margin-bottom:0.5em;
+    clear: both;
+    overflow: hidden;
+}
+.pagination ul {
+    display:block;
+    margin: 0;
+}
+.pagination ul li {
+    display:block;
+    float:left;
+    width: auto;
+    min-width:25px;
+    margin:2px;
+    text-align:center;
+    background:#fff;
+    border:1px solid #aaa;
+    line-height:1.5em;
+    font-size:12px;
+    border-radius:5px;
+}
+.pagination ul li a {
+    color:#333;
+    text-decoration: none;
+}
+.pagination ul li.current {
+    background: #4f8ac4;
+}
+.filter button {
+    display: inline-block;
+    padding: 0.3em 0.7em;
+    text-align: center;
+    text-decoration: none;
+    cursor: pointer;
+    outline: none;
+    white-space:nowrap;
+    width: auto;
+    height: auto;
+    line-height: 1em;
+    border: 1px solid #ccc;
+    border-bottom-color: #bbb;
+    border-radius: 0.3em;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+    background-color: #2c5885;
+    background-image: -moz-linear-gradient(top, #316394, #25496e);
+    background-image: -ms-linear-gradient(top, #316394, #25496e);
+    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#316394), to(#25496e));
+    background-image: -webkit-linear-gradient(top, #316394, #25496e);
+    background-image: -o-linear-gradient(top, #316394, #25496e);
+    background-image: linear-gradient(top, #316394, #25496e);
+    background-repeat: repeat-x;
+    filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",#316394,#25496e));
+    border-color: #25496e #25496e #112334;
+    border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0, 0, 0, 0.25);
+    filter: e(%("progid:DXImageTransform.Microsoft.gradient(enabled = false)"));
+}
+.filter button.small {
+    font-size: 0.9em;
+}
+.filter button.large {
+    padding: 0.7em 1.5em;
+}
+.filter button.disabled, .filter button[disabled] {
+    cursor: default;
+}
+.filter button:hover {
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+    background: #316394;
+}
+.filter button.active, .filter button:active {
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+    background: #316394;
+}
+.filter button.disabled, .filter button[disabled] {
+    opacity: 0.65;
+    filter: e(%("alpha(opacity=%d)", 65));
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+.sort-field {
+    text-decoration: none;
+    white-space: nowrap;
+}
+.sort-field.ASC:after {
+    content: " ▲";
+}
+.sort-field.DESC:after {
+    content: " ▼";
+}
 table.list {
     border-radius: 0;
     margin-bottom: 1em;
