--- a/view/editor/editor.css
+++ b/view/editor/editor.css
@@ -96,18 +96,19 @@ body.view-layout #teacss-layer > .editor-panel > .preview-toolbar > .close-butto
 
 .teacss-ui .lp-add-field {
     width: 96px;
-    height: 46px;
+    height: 62px;
     background: #f5f5f5;
     border: 1px solid #ddd;
     margin: 1px;
     text-align: center;
     display: inline-block;
+    vertical-align: top;
     color: #555;
 }
 
 .teacss-ui .lp-add-field:before {
     font-size: 20px;
-    margin: 5px 0;
+    margin: 10px 0 5px;
     display: block;
 }
 
