--- a/view/assets/style.css
+++ b/view/assets/style.css
@@ -1,22 +1,3 @@
-.update_status_ok{
-    border-color: green;
-    background: rgba(198, 242, 219, 0.75) !important;
-    background: 0px 0px 3px 0px rgba(50, 185, 114, 0.75) !important;
-    -moz-box-shadow:    0px 0px 3px 0px rgba(50, 185, 114, 0.75) !important;
-    box-shadow:         0px 0px 3px 0px rgba(50, 185, 114, 0.75) !important;
-}
-
-.update_status_error{
-    border-color: rgba(239, 24, 24, 0.75);
-    background: rgba(242, 198, 198, 0.75) !important;
-    background: 0px 0px 3px 0px rgba(239, 24, 24, 0.75) !important;
-    -moz-box-shadow:    0px 0px 3px 0px rgba(239, 24, 24, 0.75) !important;
-    box-shadow:         0px 0px 3px 0px rgba(239, 24, 24, 0.75) !important;
-}
-.update_status_error:after{
-    content: "!";
-}
-
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -539,7 +520,7 @@ body {
     border-radius: 50px;
 }
 #page {
-    padding: 0px 0px 63px 250px;
+    padding: 0px 0px 36px 170px;
     box-sizing: border-box;
     min-height: 100%;
 }
@@ -548,7 +529,7 @@ body {
     position: fixed;
     background: white;
     left: 0;
-    width: 250px;
+    width: 170px;
     top: 0px;
     bottom: 0px;
     -webkit-box-shadow: 2px 0px 5px rgba(0,0,0,0.2);
@@ -623,7 +604,7 @@ body {
 #footer {
     position: absolute;
     bottom: 0px;
-    left: 250px;
+    left: 170px;
     right: 0px;
     padding: 10px 20px;
     border-top: 5px solid #71a0d0;
@@ -663,7 +644,10 @@ form {
 .pagination ul li.current {
     background: #4f8ac4;
 }
-.filter button {
+table.list tbody tr.filter th {
+    background: #e5eef6;
+}
+table.list tbody tr.filter button {
     display: inline-block;
     padding: 0.3em 0.7em;
     text-align: center;
@@ -695,31 +679,34 @@ form {
     border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0, 0, 0, 0.25);
     filter: e(%("progid:DXImageTransform.Microsoft.gradient(enabled = false)"));
 }
-.filter button.small {
+table.list tbody tr.filter button.small {
     font-size: 0.9em;
 }
-.filter button.large {
+table.list tbody tr.filter button.large {
     padding: 0.7em 1.5em;
 }
-.filter button.disabled, .filter button[disabled] {
+table.list tbody tr.filter button.disabled, table.list tbody tr.filter button[disabled] {
     cursor: default;
 }
-.filter button:hover {
+table.list tbody tr.filter button:hover {
     color: #fff;
     text-shadow: 0 -1px 0 rgba(0,0,0,.25);
     background: #316394;
 }
-.filter button.active, .filter button:active {
+table.list tbody tr.filter button.active, table.list tbody tr.filter button:active {
     color: #fff;
     text-shadow: 0 -1px 0 rgba(0,0,0,.25);
     background: #316394;
 }
-.filter button.disabled, .filter button[disabled] {
+table.list tbody tr.filter button.disabled, table.list tbody tr.filter button[disabled] {
     opacity: 0.65;
     filter: e(%("alpha(opacity=%d)", 65));
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
+}
+table.list tbody tr.filter input, table.list tbody tr.filter select {
+    margin: 0;
 }
 .sort-field {
     text-decoration: none;
