--- a/view/editor/editor.css
+++ b/view/editor/editor.css
@@ -27,6 +27,10 @@
     display: none !important;
 }
 
+.teacss-ui .change-type-dialog .combo-item {
+    width: 133px;
+}
+
 .preview-toolbar {
     border-top: 5px solid #71a0d0 !important;
     border-bottom: none !important;
@@ -39,9 +43,48 @@ body.view-layout #teacss-layer > .editor-panel > .preview-toolbar > .close-butto
     margin-top: 13px !important;
 }
 
-.preview-toolbar button {
-    float: none !important;
-    margin: 8px 5px 0 0 !important;
+.preview-toolbar .ui-state-default .ui-icon {
+  background-image: url(../../view/assets/images/ui-icons_grey_256x240.png);
+}
+
+.preview-toolbar .ui-state-hover .ui-icon, .preview-toolbar .ui-state-focus .ui-icon {
+  background-image: url(../../view/assets/images/ui-icons_white_256x240.png);
+}
+
+.teacss-ui .preview-toolbar button.ui-button {
+  float: none;
+  margin: 8px 5px 0 0 !important;
+  text-align: center;
+  text-decoration: none;
+  cursor: pointer;
+  outline: none;
+  white-space: nowrap;
+  border: 1px solid #ccc;
+  border-bottom-color: #bbb;
+  border-radius: 0.3em !important;
+  -webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+  -moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+  color: #F2F2F2;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.25);
+  background: #6296cb !important;
+  background-image: -moz-linear-gradient(top, #71a0d0, #4b87c3) !important;
+  background-image: -ms-linear-gradient(top, #71a0d0, #4b87c3) !important;
+  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#71a0d0), to(#4b87c3)) !important;
+  background-image: -webkit-linear-gradient(top, #71a0d0, #4b87c3) !important;
+  background-image: -o-linear-gradient(top, #71a0d0, #4b87c3) !important;
+  background-image: linear-gradient(top, #71a0d0, #4b87c3) !important;
+  background-repeat: repeat-x;
+  filter: e(%("progid:DXImageTransform.Microsoft.gradient(startColorstr='%d', endColorstr='%d', GradientType=0)",#71a0d0,#4b87c3));
+  border-color: #4b87c3 #4b87c3 #306191;
+  border-color: rgba(0,0,0,0.1) rgba(0,0,0,0.1) rgba(0, 0, 0, 0.25);
+  filter: e(%("progid:DXImageTransform.Microsoft.gradient(enabled = false)"));  
+}
+
+.teacss-ui .preview-toolbar button.ui-button.ui-state-hover  {
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0,0,0,.25) !important;
+  background: #71a0d0 !important;
 }
 
 .teacss-ui .ui-dialog-titlebar {
