--- a/view/editor/style/style.css
+++ b/view/editor/style/style.css
@@ -35,6 +35,14 @@
   /*background-color: #FFE2E0 !important;*/
 }
 
+ul li {
+    list-style-type: square;
+}
+
+ol li {
+    list-style-type: decimal;
+}
+
 .error{
   color: #EA493C !important;
   font-family: Arial;
@@ -154,6 +162,10 @@
   width: 100%;
 }
 
+.btn_wrap a.btn_form:hover, .form .form_submit button.form_field_submit:hover {
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.3) inset, 0 0 10px 2px rgba(0, 0, 0, 0.5) !important;
+}
+
 .form .form_submit button.form_field_submit div {
   display: block;
   width: 100%;
@@ -165,6 +177,7 @@
   text-align: center;
   width: 100%;
   border-radius: 3px;
+  text-transform: uppercase;
 }
 
 .form .form_bottom {
@@ -254,7 +267,7 @@
 .header .container .span_btn .btn_wrap a {
   -moz-user-select: none;
   border-radius: 3px;
-  box-shadow: 0 0 0 1.5px rgba(0, 0, 0, 0.15) inset;
+  box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.15) inset;
   color: #ffffff;
   cursor: pointer;
   display: inline-block;
@@ -643,8 +656,8 @@
 }
 
 .order_2 .btn_wrap a.btn_form {
-  font-family: "Open Sans Bold", Arial;
-  font-weight: bold;
+  font-family: "Open Sans", Arial;
+  font-weight: 500;
   font-size: 24px;
   text-transform: uppercase;
   text-shadow: none;
@@ -715,7 +728,7 @@
   font-size: 50px;
   font-weight: 600;
   line-height: 128%;
-  margin: -14px 0 0 -3px;
+  margin: -14px 0 0 -1px;
   padding: 0;
   text-shadow: 0 1px 0 #fff;
   text-transform: uppercase;
@@ -2453,7 +2466,7 @@
   color: #FFF;
   font-size: 18px !important;
   line-height: 150%;
-  font-family: "Open Sans",Arial;
+  font-family: "Open Sans Semibold",Arial;
   font-weight: 600;
   text-transform: uppercase;
 }
@@ -2504,7 +2517,7 @@
   transition: all 1s ease;
 }
 
-.gallery_1 .item_list .item_block .overlay {
+.gallery_1 div.item_list .item_block .overlay {
   background: none repeat scroll 0 0 rgba(0, 0, 0, 0.5);
     color: white;
     height: 100%;
@@ -2569,7 +2582,7 @@
   overflow: hidden;
   color: #2B2B2B;
   font-size: 16px;
-  font-family: "Open Sans",Arial;
+  font-family: "Open Sans Semibold", Arial;
   font-weight: 600;
   text-transform: uppercase;
   white-space: nowrap;
@@ -2671,7 +2684,7 @@
 .gallery_3 .item_list .item .overlay .img_title {
   color: #2B2B2B;
   font-size: 15px;
-  font-family: "Open Sans",Arial;
+  font-family: "Open Sans Semibold",Arial;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 120%;
@@ -2739,7 +2752,7 @@
 .gallery_4 .item_list .item .overlay .img_title {
   color: #2B2B2B;
   font-size: 15px;
-  font-family: "Open Sans", Arial;
+  font-family: "Open Sans Semibold", Arial;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 120%;
@@ -2836,7 +2849,7 @@
 }
 .gallery_5 .item_list .slider .overlay .img_title {
     color: #fff;
-    font-family: "Open Sans",Arial;
+    font-family: "Open Sans Semibold",Arial;
     font-size: 18px;
     font-weight: 600;
     text-transform: uppercase;
@@ -2920,7 +2933,7 @@
 }
 .gallery_6 .item_list .item_block .overlay .img_title {
     color: #fff;
-    font-family: "Open Sans",Arial;
+    font-family: "Open Sans Semibold",Arial;
     font-size: 18px;
     font-weight: 600;
     text-transform: uppercase;
@@ -3021,7 +3034,7 @@
 .gallery_7 .img_title {
   color: #FFF;
   font-size: 18px !important;
-  font-family: "Open Sans",Arial;
+  font-family: "Open Sans Semibold",Arial;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 150%;
@@ -3037,11 +3050,6 @@
 
 .gallery_7 .item_list .item_block div.preview_img {
   overflow: hidden;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
 }
 
 .gallery_7 .item_list .item_block .overlay {
@@ -3178,7 +3186,7 @@
 .gallery_8 .img_title {
   color: #FFF;
   font-size: 18px !important;
-  font-family: "Open Sans",Arial;
+  font-family: "Open Sans Semibold",Arial;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 150%;
@@ -3197,11 +3205,6 @@
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
 }
 
 .gallery_8 .item_list .item_block .overlay {
@@ -3334,7 +3337,7 @@
 .gallery_9 .img_title {
   color: #FFF;
   font-size: 18px !important;
-  font-family: "Open Sans",Arial;
+  font-family: "Open Sans Semibold",Arial;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 150%;
@@ -3353,11 +3356,6 @@
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
 }
 
 .gallery_9 .item_list .item_block .overlay {
@@ -3514,7 +3512,7 @@
 .gallery_10 .img_title {
   color: #FFF;
   font-size: 18px !important;
-  font-family: "Open Sans",Arial;
+  font-family: "Open Sans Semibold",Arial;
   font-weight: 600;
   text-transform: uppercase;
   line-height: 150%;
@@ -3533,11 +3531,6 @@
   background-size: cover;
   background-position: center center;
   overflow: hidden;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
 }
 
 .gallery_10 .item_list .item_block .overlay {
