--- a/view/editor/style/style.css
+++ b/view/editor/style/style.css
@@ -4188,6 +4188,7 @@ ol li {
 }
 
 .footer_1 .copyright a {
+  background: url(../../assets/images/lpcandy_small.png) no-repeat 0 50%;
   display: inline-block;
   height: 40px;
   color: #828282;
@@ -4196,11 +4197,6 @@ ol li {
   text-decoration: none;
   font-size: 13px;
   line-height: 40px;
-  -webkit-transition: all 0.4s ease-in-out;
-  -moz-transition: all 0.4s ease-in-out;
-  -o-transition: all 0.4s ease-in-out;
-  -ms-transition: all 0.4s ease-in-out;
-  transition: all 0.4s ease-in-out;
 }
 
 .footer_1 .copyright a:hover {
